[project]
name = "amiga-gui"
version = "0.1.0"
description = "Web GUI for controlling and monitoring the AmigaDrivers sensor rig"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=5.0.0.93",
    "numpy>=2",
    "nicegui>=2",
    "pyyaml>=6",
    "pyjson5>=1",
]

[project.scripts]
amiga-gui = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
